# anocat_backend

./: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  start_app.py
migrations/: env.py
migrations/versions/: 20250406_2704d40bfac7_added_first_init.py  20250406_3a85d4959469_added_first_init.py  20250407_c920192fbb02_added_datetime_mixin_server_default.py  20250407_cf945cce1373_added_datetime_mixin_server_default.py
src/: main.py
src/application/uow/: uow.py
src/config/: app.py  database.py  sentry.py  server.py  telegram.py
src/domain/messages/: action_hello.py  action_mailto.py  new_mail_notification.py
src/domain/models/: __init__.py  black_list.py  mails.py  stop_words.py  users.py
src/domain/repositories/: black_list.py  mails.py  stop_words.py  users.py
src/infrastructure/aiogram/: tg_bot.py
src/infrastructure/database/: base.py
src/infrastructure/fastapi/: app.py
src/infrastructure/logger/: logger.py
src/ui/htmx/: router.py
src/ui/rest_api/: __init__.py  router.py
src/ui/tg_api/: __init__.py
src/utils/: templates.py
src/utils/exceptions/: http_exc.py
src/utils/mails/: stop_words_detector.py
static/css/: dark_theme_colors.css  reset.css  style.css
static/favicon/: site.webmanifest
templates/: base.tmpl
templates/components/: black_list.html  mail_preview.html  mailto_profile.html  profile.html  stop_words.html
templates/macros/: avatars.html  cat_messages.html  mails.html  profile_info.html
templates/pages/: index.html  mailto.html
templates/tab_sections/: inbox_mails.html  sent_mails.html
(+23 files in other folders)
